[package]
name = "rsa"
version = "0.1.0"
edition = "2021"
authors = ["Hugh Brown <hughdbrown@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-exponentiation = { git = "https://github.com/hughdbrown/fast-exponentiation.git" }
prime-factors = { git = "https://github.com/hughdbrown/prime-factors.git" }
gcd-lcm = { git = "https://github.com/hughdbrown/gcd-lcm.git" }
primality-test = {git = "https://github.com/hughdbrown/primality-test.git" }
prng = {git = "https://github.com/hughdbrown/prng.git" }
